--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 					</div>
 					<div class="email-subscribe-form">
 						<input type="email" placeholder="Get discount codes in your inbox">
-						<input type="submit" name="SUBSCRIBE">
+						<button type="submit" name="SUBSCRIBE">Submit Query</button>
 					</div>
 				</div>
 			</div>
